--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test
 spring.datasource.username=root
-spring.datasource.password=Wanghao@1987
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=8888
 server.address=0.0.0.0
@@ -21,3 +21,5 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 # 启动日志
 server.tomcat.accesslog.enabled=true
 server.tomcat.basedir=./
+
+
